Finished tp_queue, added skip list - both lockfree

--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -1,7 +1,8 @@
 # Create a static library from core sources
 add_library(core
-    utils/skip_list.cpp
+    utils/skip_list.h
     utils/tp_queue.h
+    core.cpp
 )
 
 # Add headers for consumers
